objects/Mask_Layer__c.object
<CustomObject>
    <fields>
        <fullName>DigitizedAreaPolarity__c</fullName>
        <description>Stores information related to the DigitizedAreaPolarity</description>
        <label>DigitizedAreaPolarity</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EssentialLayerNames__c</fullName>
        <description>Stores information related to the EssentialLayerNames</description>
        <label>EssentialLayerNames</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ImpactedMaskLayerNames__c</fullName>
        <description>Stores information related to the ImpactedMaskLayerNames</description>
        <label>ImpactedMaskLayerNames</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InformationOnMaskLayer__c</fullName>
        <description>Stores information related to the InformationOnMaskLayer</description>
        <label>InformationOnMaskLayer</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InformationOnPotentiallyImpactedMaskLaye__c</fullName>
        <description>Stores information related to the InformationOnPotentiallyImpactedMaskLayer</description>
        <label>InformationOnPotentiallyImpactedMaskLaye</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IsCancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LogicalOperationType__c</fullName>
        <description>Stores information related to the LogicalOperationType</description>
        <label>LogicalOperationType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Custom</fullName>
                </value>
                <value>
                    <fullName>Foundry Std</fullName>
                </value>
                <value>
                    <fullName>TechFile</fullName>
                </value>
                <value>
                    <fullName>TECN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LogicalOperation__c</fullName>
        <description>Stores information related to the LogicalOperation</description>
        <label>LogicalOperation</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MaskLayerType__c</fullName>
        <description>Stores information related to the MaskLayerType</description>
        <label>MaskLayerType</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaskLayerUniqueIdentifier__c</fullName>
        <label>MaskLayerUniqueIdentifier</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Mask_Layer_Number__c</fullName>
        <description>This field stores the Mask Layer Number</description>
        <label>Mask Layer Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mask_Layer_Rev__c</fullName>
        <description>Mask Layer Revision</description>
        <label>Mask Layer Rev</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mask_Layer_Type__c</fullName>
        <defaultValue>&quot;MASKLAYER&quot;</defaultValue>
        <label>Mask_Layer_Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mask_Set_Title__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Mask Set Title associated to the Mask Layer</description>
        <label>Mask Set Title</label>
        <referenceTo>Mask_Set_Title__c</referenceTo>
        <relationshipLabel>Mask Layers</relationshipLabel>
        <relationshipName>Mask_Layers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OptionalLayerNames__c</fullName>
        <description>Stores information related to the OptionalLayerNames</description>
        <label>OptionalLayerNames</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OriginalDigitizedAreaPolarity__c</fullName>
        <description>Stores information related to the OriginalDigitizedAreaPolarity</description>
        <label>OriginalDigitizedAreaPolarity</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PTRF_Frame_Tapeout__c</fullName>
        <description>Frame Tapeout of the PTRF associated</description>
        <formula>PTRF__r.Frame_Tapeout__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PTRF Frame Tapeout</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PTRF_Mask_Set_Title__c</fullName>
        <formula>CASESAFEID(PTRF__r.MaskSetTitle__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PTRF Mask Set Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PTRF_Order_Status__c</fullName>
        <description>Order status of the PTRF associated</description>
        <formula>TEXT(PTRF__r.Status__c)</formula>
        <label>PTRF Order Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PTRF_Prime_Tapeout__c</fullName>
        <description>Prime Tapeout of the PTRF associated</description>
        <formula>PTRF__r.Prime_Tapeout__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PTRF Prime Tapeout</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PTRF_Reticle_Type__c</fullName>
        <description>Stores the Reticle Type of the PTRF</description>
        <formula>TEXT(PTRF__r.Recticle_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PTRF Reticle Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PTRF_Tech_Geo_Value__c</fullName>
        <formula>PTRF__r.Tech_Geo_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PTRF Tech Geo Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PTRF__c</fullName>
        <description>PTRF associated to the Mask layer</description>
        <label>PTRF</label>
        <referenceTo>PTRF__c</referenceTo>
        <relationshipLabel>Mask Layers</relationshipLabel>
        <relationshipName>Mask_Layers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ROM_Code__c</fullName>
        <description>ROM Code Value</description>
        <label>ROM Code</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SizingPerSize__c</fullName>
        <description>Stores information related to the SizingPerSize</description>
        <label>SizingPerSize</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <description>Sorting Order</description>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tapeout__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Stores information related to the Tapeout</description>
        <label>Tapeout</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tech_Geo__c</fullName>
        <description>Tech Geometry of the PTRF associated</description>
        <formula>PTRF__r.Tech_Geo__c</formula>
        <label>Tech Geo</label>
        <type>Text</type>
    </fields>
    <label>Mask Layer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Mask_Layer_Number__c</columns>
        <columns>Mask_Layer_Rev__c</columns>
        <columns>ROM_Code__c</columns>
        <columns>Tech_Geo__c</columns>
        <columns>PTRF_Prime_Tapeout__c</columns>
        <columns>PTRF_Frame_Tapeout__c</columns>
        <columns>PTRF_Order_Status__c</columns>
        <columns>PTRF_Reticle_Type__c</columns>
        <columns>Tapeout__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Mask Layer</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mask Layers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Validation_On_ROM_Code_UpperCase</fullName>
        <active>false</active>
        <description>ROM Code should be of uppercase</description>
        <errorConditionFormula>NOT(Regex( ROM_Code__c ,&quot;[A-Z0-9]*&quot;))</errorConditionFormula>
        <errorDisplayField>ROM_Code__c</errorDisplayField>
        <errorMessage>ROM Code values should be in UpperCase</errorMessage>
    </validationRules>
</CustomObject>